# AlterEgo

./: .env  app.ipynb  app.py  pyproject.toml
me/: summary.txt
